@@ -67,12 +67,12 @@ public class EstudoRepositoryImplTest extends AbstractRepositoryImplTest {
 		
 		save(tipoProduto);
 		
-		Produto produto = Fixture.produto("1", "teste", "teste", PeriodicidadeProduto.SEMANAL, tipoProduto, 5, 5, new Long(10000), TributacaoFiscal.TRIBUTADO);
+		Produto produto = Fixture.produto("1", "teste", "teste", PeriodicidadeProduto.SEMANAL, tipoProduto, 5, 5, Long.valueOf(10000), TributacaoFiscal.TRIBUTADO);
 		produto.addFornecedor(dinap);
 		save(produto);
 		
 		ProdutoEdicao produtoEdicao = 
-			Fixture.produtoEdicao(1L, 1, 1, new Long(10000), BigDecimal.TEN, BigDecimal.TEN, "ABCD", produto, null, false);
+			Fixture.produtoEdicao(1L, 1, 1, Long.valueOf(10000), BigDecimal.TEN, BigDecimal.TEN, "ABCD", produto, null, false);
 		
 		save(produtoEdicao);
 		
