@@ -136,23 +136,23 @@ public class LancamentoRepositoryImplTest extends AbstractRepositoryImplTest {
 		cromoReiLeao.addFornecedor(fornecedorDinap);
 		save(cromoReiLeao);
 
-		veja1 = Fixture.produtoEdicao(1L, 10, 7, new Long(100), BigDecimal.TEN,
+		veja1 = Fixture.produtoEdicao(1L, 10, 7, Long.valueOf(100), BigDecimal.TEN,
 				new BigDecimal(15), "ABCDEFGHIJKLMNOPQ", veja, null, false);
 
-		ProdutoEdicao quatroRoda2 = Fixture.produtoEdicao(2L, 15, 30, new Long(
+		ProdutoEdicao quatroRoda2 = Fixture.produtoEdicao(2L, 15, 30, Long.valueOf(
 				100), BigDecimal.TEN, BigDecimal.TEN, "ABCDEFGHIJKLMNOPA",
 				quatroRodas, null, false);
 
-		ProdutoEdicao infoExame3 = Fixture.produtoEdicao(3L, 5, 30, new Long(
+		ProdutoEdicao infoExame3 = Fixture.produtoEdicao(3L, 5, 30, Long.valueOf(
 				100), BigDecimal.TEN, new BigDecimal(12), "ABCDEFGHIJKLMNOPC",
 				infoExame, null, false);
 
-		ProdutoEdicao capricho1 = Fixture.produtoEdicao(1L, 10, 15, new Long(
+		ProdutoEdicao capricho1 = Fixture.produtoEdicao(1L, 10, 15, Long.valueOf(
 				120), BigDecimal.TEN, BigDecimal.TEN, "ABCDEFGHIJKLMNOPD",
 				capricho, null, false);
 
 		ProdutoEdicao cromoReiLeao1 = Fixture.produtoEdicao(1L, 100, 60,
-				new Long(10), BigDecimal.ONE, new BigDecimal(1.5),
+				Long.valueOf(10), BigDecimal.ONE, new BigDecimal(1.5),
 				"ABCDEFGHIJKLMNOPE", cromoReiLeao, null, false);
 
 		save(veja1, quatroRoda2, infoExame3, capricho1, cromoReiLeao1);
